# python-hello-web-monorepo

./: README.md  build_files.sh  pyproject.toml  requirements.txt  requirements.txt.bak  tasks.py  vercel.json
blog/: admin.py
blog/migrations/: 0001_initial.py
django_poetry_example/: asgi.py  settings.py  urls.py  wsgi.py
docs/: 2-auth-service-design.md  index.md  template.md
templates/: base.html  index.html  post_detail.html  sidebar.html
third-party-auth-api/: index.py
third_party_auth_api/: app.py
